--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   flutter_bloc: ^8.1.1
   bloc: ^8.1.0
   conditional_builder_null_safety: ^0.0.6
-
+  dio: ^4.0.6
+  hexcolor: ^3.0.1
+  shared_preferences: ^2.0.15
+  webview_flutter: ^3.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
